@@ -21,6 +21,7 @@ maxFileSizeToOcr=2147483647
 minFileSizeToOcr=0
 timeout=120
 outputType=txt
+preserveInterwordSpacing=false
 
 # properties for image processing
 # to enable processing, set enableImageProcessing to 1
