@@ -1,5 +1,8 @@
 Release 1.15 - ??
 
+  * Add configurability of "preserve-interword-spacing" to
+    TesseractOCRParser (TIKA-2190).
+
   * Added experimental SAX parser for .pptx files. To select this parser,
     set useSAXPptxExtractor(true) on OfficeParserConfig (TIKA-2210).
 
